Wrong Arimo fonts selected on anandtech.com
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox79 | --- | verified |
People
(Reporter: johnp, Assigned: jfkthame)
References
()
Details
Attachments
(1 file)
With gfx.e10s.font-list.shared;true on latest Nightly and google-croscore-arimo-fonts installed on Fedora 32 the Arimo font on anandtech.com selects the bold italic variant in the main text (font-weight: 400) and the regular one in the "Pipeline Stories" header (font-weight: 700). Fonts are chosen correctly with the shared font list disabled. This also happens with a clean profile (only gfx.e10s.font-list.shared;true) as early as Firefox version 68.
| Assignee | ||
Comment 1•6 years ago
|
||
That's....weird. I can reproduce also on Ubuntu with the fonts-croscore package installed. Will look into it; thanks for reporting.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
OK, I think I see what the problem is here. When collecting the font names for src:local() lookups we record the family and face index within the family of each available font; but then when storing the faces into the font list, we potentially re-sort the faces (if it is a "simple" family with no more than the standard 4 styles), and that invalidates the face indexes that we stored in the src:local table.
| Assignee | ||
Comment 3•6 years ago
|
||
Comment 5•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
Reproduced in Nightly 79.0a1 (2020-06-08) (20200608094842) on Ubuntu 18.04.4.
Verified > Fixed on the latest Nightly 80.0a1 (2020-07-01) (20200701093012) and beta 79.0b2 (20200630191632) on Ubuntu 18.04.4.
Description
•