Bug 1644285 - Use descriptor rather than index (which might change) to record font face in local-names InitData record on Linux. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D79192